fixes #63 overlap layout bug

--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -859,6 +859,7 @@ img.spacer {
   .two-column {
     grid-template-columns: 1fr;
     max-width: 70vw;
+    margin-top: 1rem;
   }
 }
 
@@ -885,6 +886,7 @@ img.spacer {
 @media only screen and (max-width: 1024px) {
   .two-column-item h3 {
     font-size: 15vw;
+    padding-bottom: 1rem;
   }
 }
 @media only screen and (min-width: 1024px) and (max-width: 1280px) {
